--- a/composer.json
+++ b/composer.json
@@ -3,21 +3,31 @@
     "description": "A Laravel Package for Gemspay",
     "keywords": [
         "sirval",
+        "php",
         "laravel",
-        "laravel-gemspay"
+        "laravel-gemspay",
+        "github",
+        "Open Source",
+        "payments",
+        "virtual cards",
+        "laravel 8",
+        "laravel 9",
+        "laravel 10",
+        "laravel 11"
     ],
     "homepage": "https://github.com/sirval/laravel-gemspay",
     "license": "MIT",
     "authors": [
         {
-            "name": "Ohuka Ikenna Valentine",
+            "name": "Ikenna Ohuka",
             "email": "ohukaiv@gmail.com"
         }
     ],
     "require": {
-        "php": "^8.1",
-        "spatie/laravel-package-tools": "^1.14.0",
-        "illuminate/contracts": "^10.0"
+        "php": "^7.3|^8.1|^8.2|^8.3",
+        "illuminate/contracts": "~7|~8|~9|^10.0",
+        "illuminate/support": "*",
+        "spatie/laravel-package-tools": "^1.14.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
@@ -33,14 +43,17 @@
         "spatie/laravel-ray": "^1.26"
     },
     "autoload": {
+        "files": [
+            "src/Support/helpers.php"
+        ],
         "psr-4": {
-            "Sirval\\LaravelGemspay\\": "src/",
-            "Sirval\\LaravelGemspay\\Database\\Factories\\": "database/factories/"
+            "Sirval\\Gemspay\\": "src/",
+            "Sirval\\Gemspay\\Database\\Factories\\": "database/factories/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Sirval\\LaravelGemspay\\Tests\\": "tests/",
+            "Sirval\\Gemspay\\Tests\\": "tests/",
             "Workbench\\App\\": "workbench/app/"
         }
     },
@@ -72,10 +85,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Sirval\\LaravelGemspay\\LaravelGemspayServiceProvider"
+                "Sirval\\Gemspay\\GemspayServiceProvider"
             ],
             "aliases": {
-                "LaravelGemspay": "Sirval\\LaravelGemspay\\Facades\\LaravelGemspay"
+                "Gemspay": "Sirval\\Gemspay\\Facades\\Gemspay"
             }
         }
     },
